--- a/docs/src/manual/install.tex
+++ b/docs/src/manual/install.tex
@@ -5,22 +5,50 @@
 
 \usepackage[a4paper,margin=2cm]{geometry}
 \setcounter{secnumdepth}{0}
-\usepackage[inline]{enumitem}
+
+\usepackage{hyperref}
+\usepackage{listings}
 
 \begin{document}
 \section{Installation \& Configuration}
 
-General settings for the scripts can be found in the file \texttt{g16.tools.rc}.
-Alternatively, settings can be stored in \texttt{.g16.toolsrc}, 
-which always has precedence.
-Every script will check four different directories in the order
-\begin{enumerate*}
-\item installation directory,
-\item user's home,
-\item \texttt{.config} in user's home,
-\item parent working directory.
-\end{enumerate*}
-It will load the last configuration file it finds.
+The scripts of this repository are not self-contained,
+they each need access to the resources directory 
+and it has to be called like that.
 
-Setting files can be generated with the \texttt{configure/configure.sh} script.
+The easiest way to install the script is to clone the git repository from
+\href{https://github.com/polyluxus/tools-for-g16.bash}{github.com/polyluxus/tools-for-g16.bash}.
+Alternatively you can download the tarball archive of the latest release from
+\href{https://github.com/polyluxus/tools-for-g16.bash/releases/latest}{github.com/polyluxus/tools-for-g16.bash/releases/latest}.
+
+After unpacking it only needs to be configured.
+There are a two kinds of file names recognised:
+\lstinline`g16.tools.rc` and the hidden \lstinline`.g16.toolsrc`.
+The repository comes with an example of the former, 
+therefore updating the repository will (probably) overwrite the file.
+The latter file is excluded from this process,
+and therefore has always precedence, 
+so it is generally a safer option to configure.
+
+The scripts will search for these configuration settings in the following order of directories:
+\begin{enumerate}
+  \item the path to the script itself 
+  \item the user's home directory
+  \item the \texttt{.config} directory in the user's home directory
+  \item the current working directory, i.e. from where the script is called.
+\end{enumerate}
+Only the last found file will be applied.
+
+The repository comes with a configuration script in the \texttt{configure} directory.
+It produces a formatted file like \lstinline`g16.tools.rc` from old or the default settings.
+While you can assign an arbitrary filename, 
+I recommend to store as \lstinline`.g16.toolsrc` in the root directory of the repository.
+
+To make the scripts accessible from anywhere, the directory where they have been stored
+must be found in the \texttt{PATH} variable.
+Alternatively, you can create softlinks to them in a directory, 
+which is already recognised by \texttt{PATH}.
+A common setting for this is the local \texttt{\$HOME/bin}.
+The configure script will, if desired, try to create these softlinks (omitting the \texttt{sh} suffix).
+
 \end{document}
