--- a/docs/src/manual/utilities.tex
+++ b/docs/src/manual/utilities.tex
@@ -5,180 +5,184 @@
 
 \usepackage[a4paper,margin=2cm]{geometry}
 \setcounter{secnumdepth}{0}
-
-% Please no font errors
-% https://tex.stackexchange.com/a/9366/33413
-\newcommand\mybackslash{\char`\\}
-
-\usepackage[inline]{enumitem}
-\usepackage{calc}
-% Intermediately include a new list type to import the cheat sheet
-\newenvironment{rslisttt}[1]
-{
-  \begin{description}[labelwidth=\widthof{\texttt{#1}},font=\ttfamily]
-}{
-  \end{description}
-}
-\newenvironment{rsinline}[1][\ttfamily]
-{
-  \begin{description*}[mode=unboxed,font={#1},itemjoin={{; }},afterlabel={{\nobreakspace}},after={{.}}]
-}{
-  \end{description*}
-}
+\usepackage{hyperref}
+\usepackage{listings}
 
 \begin{document}
 \section{Utilities}
 
 This repository comes with the following scripts and files:
 
-\subsection{\texttt{g16.prepare.sh}}
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.prepare.sh`}}{g16.prepare.sh}}
 
 This tool reads in a file containing a set of cartesian coordinates and
 writes a Gaussian inputfile with predefined keywords. 
 The script interfaces to Xmol format, 
 Turbomole/ GFN-xTB \texttt{coord} format, too.
 
-Usage: \texttt{g16.prepare.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-T <FLT>] Temperature (kelvin)
-  \item[-P <FLT>] Pressure (atmosphere)
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-R <ARG>] Specific route section \texttt{ARG}
-  \item[-l <INT>] Load predefined route section 
-  \item[-l list ] Show all predefined route sections
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-C <ARG>] Specify caption/title of job;\\ Replacements:
-  \begin{rsinline} 
-    \item[\%F] input filename
-    \item[\%f] input filename without \texttt{.xyz}
-    \item[\%s] like \texttt{\%f}, also filtering \texttt{start}
-    \item[\%j] jobname%
-    \item[\%c] charge (with indicator \texttt{chrg})
-    \item[\%M] multiplicity (with indicator \texttt{mult})
-    \item[\%U] unpaired electrons (with indicator \texttt{uhf})%
-  \end{rsinline}
-  \item[-j <ARG>] Jobname %
-    (derives filename of generated input; default: \texttt{<file>})
-  \item[-j \%f  ] Jobname is \texttt{<file>} filtering \texttt{.xyz}
-  \item[-j \%s  ] Jobname is \texttt{<file>} filtering \texttt{start.xyz}
-  \item[-f <ARG>] Filename of generated input
-  \item[-c <NUM>] Charge (default: 0)
-  \item[-M <INT>] Multiplicity (default: 1; \( \geq 1 \))
-  \item[-U <INT>] Unpaired electrons (unset; \( \geq 0 \))
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.prepare.sh [opt] <file>`
 
-\subsection{\texttt{g16.testroute.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-T <FLT>`} & Temperature (kelvin) \\
+  {\lstinline`-P <FLT>`} & Pressure (atmosphere) \\
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-R <ARG>`} & Specific route section {\lstinline`ARG`} \\
+  {\lstinline`-l <INT>`} & Load predefined route section  \\
+  {\lstinline`-l list `} & Show all predefined route sections \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-C <ARG>`} & Specify caption/title of job;\newline%
+    Replacements: 
+    {\lstinline`%F`} input filename; %
+    {\lstinline`%f`} input filename without \texttt{.xyz}; %
+    {\lstinline`%s`} like {\lstinline`%f`}, also filtering \texttt{start}; %
+    {\lstinline`%j`} jobname; %
+    {\lstinline`%c`} charge (with indicator \texttt{chrg}); %
+    {\lstinline`%M`} multiplicity (with indicator \texttt{mult}); %
+    {\lstinline`%U`} unpaired electrons (with indicator \texttt{uhf}) \\
+  {\lstinline`-j <ARG>`} & Jobname (derives filename of generated input; default: {\lstinline`<file>`}) \\
+  {\lstinline`-j %f`}    & Jobname is {\lstinline`<file>`} filtering \texttt{.xyz} \\
+  {\lstinline`-j %s`}    & Jobname is {\lstinline`<file>`} filtering \texttt{start.xyz} \\
+  {\lstinline`-f <ARG>`} & Filename of generated input \\
+  {\lstinline`-c <NUM>`} & Charge (default: 0) \\
+  {\lstinline`-M <INT>`} & Multiplicity (default: 1; \( \geq 1 \)) \\
+  {\lstinline`-U <INT>`} & Unpaired electrons (unset; \( \geq 0 \)) \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--      `} & Close reading options \\
+  {\lstinline`-s      `} & Silence script (incremental) \\
+  {\lstinline`-h      `} & Help file  \\
+\end{tabular}
+
+\subsection{Pre-processing: \texorpdfstring{{\lstinline`g16.testroute.sh`}}{g16.testroute.sh}}
 
 This tool parses a Gaussian 16 inputfile and 
 tests the route section for syntax errors 
 with the Gaussian 16 utility \texttt{testrt}.
 
-\begin{rslisttt}{-m <ARG>}
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+Usage: 
 
-\subsection{\texttt{g16.dissolve.sh}}
+\lstinline`g16.testroute.sh [opt] <file>`
+
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`--`} & Close reading options \\
+  {\lstinline`-s`} & Silence script (incremental) \\
+  {\lstinline`-h`} & Help file  \\
+\end{tabular}
+
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.dissolve.sh`}}{g16.dissolve.sh}}
 
 This tool reads in a Gaussian 16 inputfile (of a preferably completed calculation)
 and adds relevant keywords for solvent corrections.
 (Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
-Usage: \texttt{g16.dissolve.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{scrf} keyword.
-  \item[-S <ARG>] Adds option \texttt{solvent=ARG} to the \texttt{scrf} option list.
-  \item[-O      ] Runs an optimisation (preserves or adds \texttt{OPT})
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-f <ARG>] Filename of generated input
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.dissolve.sh [opt] <file>`
 
-\subsection{\texttt{g16.freqinput.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-o <ARG>`} & Adds option {\lstinline`ARG`} to the \texttt{SCRF} keyword. \\
+  {\lstinline`-S <ARG>`} & Adds option \texttt{solvent={\lstinline`ARG`}} to the \texttt{SCRF} option list. \\
+  {\lstinline`-O`}       & Runs an optimisation (preserves or adds \texttt{OPT}) \\
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-f <ARG>`} & Filename of generated input \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.freqinput.sh`}}{g16.freqinput.sh}}
 
 This tool reads in a Gaussian 16 inputfile (of a preferably completed calculation)
 and adds relevant keywords for a frequency calculation.
 (Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
-Usage: \texttt{g16.freqinput.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{freq} keyword.
-  \item[-R      ] Adds option \texttt{ReadFC} to the \texttt{freq} option list.
-  \item[-T <FLT>] Temperature (kelvin)
-  \item[-P <FLT>] Pressure (atmosphere)
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-f <ARG>] Filename of generated input
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.freqinput.sh [opt] <file>`
 
-\subsection{\texttt{g16.ircinput.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-o <ARG>`} & Adds option {\lstinline`ARG`} to the \texttt{freq} keyword. \\
+  {\lstinline`-R`}       & Adds option \texttt{ReadFC} to the \texttt{freq} option list. \\
+  {\lstinline`-T <FLT>`} & Temperature (kelvin) \\
+  {\lstinline`-P <FLT>`} & Pressure (atmosphere) \\
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-f <ARG>`} & Filename of generated input \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.ircinput.sh`}}{g16.ircinput.sh}}
 
 This tool reads in a Gaussian 16 inputfile from a (previously completed) frequency run and 
 adds relevant keywords for two separate irc calculations.
 (Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
-Usage: \texttt{g16.ircinput.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{irc} keyword.
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-f <ARG>] Filenametemplate of generated input files; %
-    \texttt{jobname.suffix} produces \texttt{jobname.fwd.suffix} and \texttt{jobname.rev.suffix} 
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.ircinput.sh [opt] <file>`
 
-\newpage
+Options:
 
-\subsection{\texttt{g16.optinput.sh}}
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-o <ARG>`} & Adds option {\lstinline`ARG`} to the \texttt{irc} keyword. \\
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-f <ARG>`} & Filenametemplate of generated input files; % 
+    If {\lstinline`<ARG>`=}\texttt{jobname.suffix} then it produces \texttt{jobname.fwd.suffix} and \texttt{jobname.rev.suffix}  \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.optinput.sh`}}{g16.optinput.sh}}
 
 This tool reads in a Gaussian 16 inputfile preferably from a (previously completed) IRC run and 
 writes and inputfile for a subsequent structure optimisation.
 (Utilises the \texttt{\%OldChk} directive and the \texttt{geom}/ \texttt{guess} keywords.)
 
-Usage: \texttt{g16.optinput.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-o <ARG>] Adds option \texttt{ARG} to the \texttt{opt} keyword.
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-f <ARG>] Filename of generated input
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.optinput.sh [opt] <file>`
 
-\subsection{\texttt{g16.spinput.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-o <ARG>`} & Adds option {\lstinline`ARG`} to the \texttt{opt} keyword. \\
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-f <ARG>`} & Filename of generated input \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Input preparation: \texorpdfstring{{\lstinline`g16.spinput.sh`}}{g16.spinput.sh}}
 
 This tool reads in a Gaussian 16 inputfile and 
 writes and inputfile for a subsequent calculation.
@@ -186,98 +190,118 @@ It is possible to overwrite the existing route section, but still
 add the \texttt{geom}/\texttt{guess} directives to base it on.
 (Utilises the \texttt{\%OldChk} directive.)
 
-Usage: \texttt{g16.spinput.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-r <ARG>] Add \texttt{ARG} to route section
-  \item[-R <ARG>] Overwites route section with \texttt{ARG}
-  \item[-t <ARG>] Adds \texttt{ARG} to end of file
-  \item[-f <ARG>] Filename of generated input
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.spinput.sh [opt] <file>`
 
-\subsection{\texttt{g16.submit.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-r <ARG>`} & Add {\lstinline`ARG`} to route section \\
+  {\lstinline`-R <ARG>`} & Overwites route section with {\lstinline`ARG`} \\
+  {\lstinline`-t <ARG>`} & Adds {\lstinline`ARG`} to end of file \\
+  {\lstinline`-f <ARG>`} & Filename of generated input \\
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Input submission: \texorpdfstring{{\lstinline`g16.submit.sh`}}{g16.submit.sh}}
 
 This tool parses and then submits a Gaussian 16 inputfile to a queueing system.
 
-Usage: \texttt{g16.submit.sh [opt] <file>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-m <INT>] Memory (megabyte)
-  \item[-p <INT>] Processors
-  \item[-d <INT>] disksize via \texttt{MaxDisk} (megabyte)
-  \item[-w <DUR>] Walltime limit
-    %\item[-b <ARG>] Specify binary (TODO)
-  \item[-e <ARG>] Specify an environment variable \texttt{ARG} in format \texttt{<VAR=value>}
-  \item[-j <INT>] Wait for job with ID \texttt{INT}
-  \item[-H      ] Submit with status hold (PBS, SLURM) or \texttt{PSUSP} (BSUB)
-  \item[-k      ] Only create (keep) the jobscript, do not submit it.
-  \item[-Q <ARG>] Queue for which job script should be created \texttt{<queue>-<special>}
-    (\texttt{<queue>}: \texttt{pbs}, \texttt{slurm}, \texttt{bsub};
-     \texttt{<special>}: \texttt{gen} [generic], \texttt{rwth})
-    %\item[-q <ARG>] Specify queue (TODO)
-   \item[-P <ARG>] Account to project (BSUB) or account (SLURM);
-    if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
-  \item[-M <ARG>] Specify a machine type (only \texttt{bsub-rwth});
-    if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
-  \item[-u <ARG>] set user email address (SLURM, BSUB);
-    if \texttt{ARG} is \texttt{default}/\texttt{0}/\texttt{''} presets are overwritten.
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.submit.sh [opt] <file>`
 
-\subsection{\texttt{g16.getenergy.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-m <INT>`} & Memory (megabyte) \\
+  {\lstinline`-p <INT>`} & Processors \\
+  {\lstinline`-d <INT>`} & disksize via \texttt{MaxDisk} (megabyte) \\
+  {\lstinline`-w <DUR>`} & Walltime limit \\
+ %{\lstinline`-b <ARG>`} & Specify binary (TODO) \\
+  {\lstinline`-e <ARG>`} & Specify an environment variable {\lstinline`ARG`} in format {\lstinline`<VAR=value>`} \\
+  {\lstinline`-j <INT>`} & Wait for job with ID {\lstinline`INT`} \\
+  {\lstinline`-H`}       & Submit with status hold (PBS, SLURM) or \texttt{PSUSP} (BSUB) \\
+  {\lstinline`-k`}       & Only create (keep) the jobscript, do not submit it. \\
+  {\lstinline`-Q <ARG>`} & Queue for which job script should be created {\lstinline`<queue>-<special>`} %
+    ({\lstinline`<queue>`}: {\lstinline`pbs`}, {\lstinline`slurm`}, {\lstinline`bsub`}; %
+     {\lstinline`<special>`}: {\lstinline`gen`} [generic], {\lstinline`rwth`}) \\
+ %{\lstinline`-q <ARG>`} & Specify queue (TODO) \\
+  {\lstinline`-P <ARG>`} & Account to project (BSUB) or account (SLURM); %
+    if {\lstinline`ARG`} is {\lstinline`default|0|''`} presets are overwritten. \\
+  {\lstinline`-M <ARG>`} & Specify a machine type (only \texttt{bsub-rwth}); %
+    if {\lstinline`ARG`} is {\lstinline`default|0|''`} presets are overwritten. \\
+  {\lstinline`-u <ARG>`} & set user email address (SLURM, BSUB); %
+    if {\lstinline`ARG`} is {\lstinline`default|0|''`} presets are overwritten. \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Post-processing: \texorpdfstring{{\lstinline`g16.getenergy.sh`}}{g16.getenergy.sh}}
 
 This tool finds energy statements from Gaussian 16 calculations.
 
-Usage: \texttt{g16.getenergy.sh [opt] [<file(s)>]}
+Usage: 
+
+\lstinline`g16.getenergy.sh [opt] [<file(s)>]`
 
 If no files given, it finds energy statements from all log files in the current directory.
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-i <ARG>] Specify input suffix if processing directory
-  \item[-o <ARG>] Specify output suffix if processing directory
-  \item[-L      ] Print the full file and path name (seperated by newline)
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+Options: 
 
-\subsection{\texttt{g16.getfreq.sh}}
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-i <ARG>`} & Specify input suffix if processing directory \\
+  {\lstinline`-o <ARG>`} & Specify output suffix if processing directory \\
+  {\lstinline`-L`}       & Print the full file and path name (seperated by newline) \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Post-processing: \texorpdfstring{{\lstinline`g16.getfreq.sh`}}{g16.getfreq.sh}}
 
 This tool summarises a frequency calculation and extracts the thermochemistry data.
 
-Usage: \texttt{g16.getfreq.sh [opt] <file(s)>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-v      ] Incrementally increase verbosity
-  \item[-V <INT>] Set level of verbosity directly, (0-4)
-  \item[-c      ] Separate values by comma (\texttt{-V0} or \texttt{-V1})
-  \item[-f <ARG>] Write summary to file instead of screen
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.getfreq.sh [opt] <file(s)>`
 
-\subsection{\texttt{g16.chk2xyz.sh}}
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-v`}       & Incrementally increase verbosity \\
+  {\lstinline`-V <INT>`} & Set level of verbosity directly, ({\lstinline`0|1|2|3|4`}) \\
+  {\lstinline`-c`}       & Separate values by comma ({\lstinline`-V0|-V1`}) \\
+  {\lstinline`-f <ARG>`} & Write summary to file instead of screen \\
+  {\lstinline`--`}       & Close reading options \\
+  {\lstinline`-s`}       & Silence script (incremental) \\
+  {\lstinline`-h`}       & Help file  \\
+\end{tabular}
+
+\subsection{Post-processing: \texorpdfstring{{\lstinline`g16.chk2xyz.sh`}}{g16.chk2xyz.sh}}
 
 A tool to convert a checkpoint file to an \texttt{xyz} file. 
 This formats the \texttt{chk} first to a \texttt{fchk}.
 
-Usage: \texttt{g16.chk2xyz.sh [-s] -h | -a | <chk-file(s)>}
+Usage: 
 
-\begin{rslisttt}{-m <ARG>}
-  \item[-a      ] Formats all checkpointfiles that are found in the current directory
-  \item[--      ] Close reading options
-  \item[-s      ] Silence script (incremental)
-  \item[-h      ] Help file 
-\end{rslisttt}
+\lstinline`g16.chk2xyz.sh [-s] -h | -a | <chk-file(s)>`
+
+Options:
+
+\begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
+  {\lstinline`-a`} & Formats all checkpointfiles that are found in the current directory \\
+  {\lstinline`--`} & Close reading options \\
+  {\lstinline`-s`} & Silence script (incremental) \\
+  {\lstinline`-h`} & Help file  \\
+\end{tabular}
 
 \end{document}
 
