--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -30,7 +30,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.2.0\_alpha, 2019-02-27)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.2.0\_alpha2, 2019-03-08)}
 \author{Martin C Schwarzer}
 \date{\today}
 
