--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -37,7 +37,7 @@
 \newcommand\mybackslash{\char`\\}
 
 % What this is about
-\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.2.0\_alpha, 2019-03-07)}
+\title{Cheat-Sheet for \texttt{tools-for-g16.bash} (0.2.0\_alpha2, 2019-03-08)}
 \author{Martin C Schwarzer}
 \date{\today}
 
