Further extended and corrected manual.

--- a/docs/src/manual/examples.tex
+++ b/docs/src/manual/examples.tex
@@ -15,9 +15,17 @@
 \begin{document}
 \section{Usage examples}
 
-\tikzinput[width=1\textwidth]{./graphics/tikz-optimisation-flowchart}
+This chapter is still in heavy developement.
 
-\tikzinput[width=1\textwidth]{./graphics/tikz-transitionstate-flowchart}
+The following chart presents a basic diagramme of how the tools may interact with each other,
+or can be chained after one another.
+
+\tikzinput[width=0.99\linewidth]{./graphics/tikz-optimisation-flowchart}
+
+The following chart attempts to do the same for the steps after a successful 
+transition state optimisation.
+
+\tikzinput[width=0.99\linewidth]{./graphics/tikz-transitionstate-flowchart}
 
 \end{document}
 
