--- a/docs/src/manual/graphics/tikz-optimisation-flowchart.tex
+++ b/docs/src/manual/graphics/tikz-optimisation-flowchart.tex
@@ -95,7 +95,7 @@
   \draw
   (chart-7-2) edge node [right] {\texttt{g16.chk2xyz}} (chart-8-2);
   \draw
-  (chart-7-2) -| (chart-8-3) node [near end, right] {\texttt{g16.getenergy}} ;
+  (chart-7-2) -| (chart-8-3) node [near end, right] {\texttt{g16.getfreq}} ;
   \draw
   (chart-9-1) edge node [above] {\(0\)} (chart-9-2);
   \draw
