--- a/docs/src/manual/intro.tex
+++ b/docs/src/manual/intro.tex
@@ -11,15 +11,15 @@
 \begin{document}
 \section{Introduction}
 
-The essence of quantum chemistry is performing calculations with a variety of different programs.
-Quite a few of these use low level input and output systems.
-In principle you are dealing with quite a few text-based files.
+The essence of quantum chemistry is performing calculations with a variety of different methods and programs.
+Quite a few of these programs use low level input and output systems.
+In principle you are usually dealing with text-based files.
 
 It is in the nature of the problem, 
 that some of the regular tasks are quite repetitive.
-In order to ease these repetitive tasks,
+In order to ease these tasks,
 but more importantly also secure a certain level of consistency,
-some steps can be automated.
+some steps can and should be automated.
 This is where this repository, 
 \href{https://github.com/polyluxus/tools-for-g16.bash}{tools-for-g16.bash},
 comes into play.
@@ -27,8 +27,8 @@ Within it are contained a few scripts written in bash,
 which are targeted to aid the use of the quantum chemistry software package 
 \href{http://gaussian.com/}{Gaussian 16}.
 They cover automatic generation of input files,
-submissing of these to a queueing system,
-and utilities to archive and extract results.
+submission of these to a queueing system,
+and post-processing of output files to archive and extract results.
 
 Please understand that this project started out to help me with my everyday work. 
 I am happy to hear about suggestions and bugs. 
@@ -49,11 +49,11 @@ and a vertical bar \lstinline{|} indicates alternatives between the inputs or op
 The following abbreviations will be used throughout:
 
 \begin{tabular}{p{0.1\linewidth}p{0.8\linewidth}}
-  {\lstinline!opt!} & Short for option(s) \\
-  {\lstinline!ARG!} & String type argument \\
-  {\lstinline!INT!} & Positive integer (including zero) \\
-  {\lstinline!NUM!} & Signed whole number (including zero) \\
-  {\lstinline!FLT!} & Floating point number \\
-  {\lstinline!DUR!} & Duration in format {\lstinline![[HH:]MM:]SS!}  \\
+  {\lstinline`opt`} & Short for option(s) \\
+  {\lstinline`ARG`} & String type argument \\
+  {\lstinline`INT`} & Positive integer (including zero) \\
+  {\lstinline`NUM`} & Signed whole number (including zero, the plus sign can be omitted) \\
+  {\lstinline`FLT`} & Signed floating point number (the plus sign can be omitted) \\
+  {\lstinline`DUR`} & Duration in format {\lstinline![[HH:]MM:]SS!}  \\
 \end{tabular}
 \end{document}
