--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -19,6 +19,9 @@
 \usepackage{listings}
 \input{lstdefs.tex}
 
+% Break tables
+\usepackage{longtable}
+
 % Symbols for SE and GH
 \usepackage{fontawesome} 
 % Symbols for creative commons
@@ -37,9 +40,12 @@
 \begin{document}
 \maketitle
 
+\tableofcontents
+\clearpage
+
 \subsection*{Preamble}
 
-The following document is currently little more than the already existing cheat sheet.
+The following document is currently little more than the already existing reference sheet.
 As documentation often goes, it takes a bit more time to do it properly.
 I apologise for the inconvenience.
 
@@ -50,9 +56,15 @@ I apologise for the inconvenience.
 
 \section{Author, Bugs, and the Rest}
 
-Martin C Schwarzer  \\
-\faStackExchange~\href{https://chemistry.stackexchange.com/users/4945}{Martin-\begin{CJK*}{UTF8}{min}マーチン\end{CJK*}}
-\faGithub~\href{https://github.com/polyluxus}{polyluxus}
+This repository was created and is maintained by Martin C Schwarzer 
+(\faStackExchange~\href{https://chemistry.stackexchange.com/users/4945}{Martin-\begin{CJK*}{UTF8}{min}マーチン\end{CJK*}}
+  \faGithub~\href{https://github.com/polyluxus}{polyluxus}).
+
+If you find any bugs, have questions, want features implemented,
+please do it via the \href{https://github.com/polyluxus/tools-for-g16.bash/issues}{GitHub Issue tracker},
+or fork it and send a pull request.
+
+The help of my colleagues for testing, finding bugs, extending the documentation is greatly appreciated.
 
 \begin{flushright}
 This document is licensed \ccbysa.
