Added tutorial to the manual.

--- a/docs/src/manual/lstdefs.tex
+++ b/docs/src/manual/lstdefs.tex
@@ -19,12 +19,13 @@
   alsoletter= {.},
 }
 \lstdefinestyle{g16tools}{
-  language         = g16tools,%
-  backgroundcolor  = \color{lightgray},%
-  basicstyle       = \color{NavyBlue}\ttfamily,%
-  keywordstyle     = [1]{\color{Violet}\bfseries},%
-  keywordstyle     = [2]{\color{OliveGreen}\bfseries},%
-  breaklines       = true,%
+  language           = g16tools,%
+  backgroundcolor    = \color{lightgray},%
+  basicstyle         = \color{NavyBlue}\ttfamily,%
+  keywordstyle       = [1]{\color{Violet}\bfseries},%
+  keywordstyle       = [2]{\color{OliveGreen}\bfseries},%
+  breaklines         = true,%
+  breakatwhitespace  = true, %
 }
 
 \lstset{style=g16tools}
