--- a/docs/src/manual/graphics/tikz-optimisation-flowchart.tex
+++ b/docs/src/manual/graphics/tikz-optimisation-flowchart.tex
@@ -56,7 +56,8 @@
       %8
                                                & %
         <method>.freq.xyz, <method>.freq.fchk  & 
-        \(E_\mathrm{ZPE}, E_\mathrm{o}, \dots, G\)\\
+        \(E_\mathrm{ZPE}, \dots , H_\mathrm{corr}, G_\mathrm{corr}, \dots \)\linebreak
+        \(\leadsto E_\mathrm{o}, \dots , H, G, \dots \) \\
       %9
       |[decision]| NImag \linebreak \( i \in \{0,1,...,\mathbb{N}\} \) & %
         |[result]| local minimum               & %
