--- a/docs/src/manual/install.tex
+++ b/docs/src/manual/install.tex
@@ -16,9 +16,9 @@ The scripts of this repository are not self-contained,
 they each need access to the resources directory 
 and it has to be called like that.
 
-The easiest way to install the script is to clone the git repository from
+The easiest way to install the script is to clone the git repository from GitHub:\newline
 \href{https://github.com/polyluxus/tools-for-g16.bash}{github.com/polyluxus/tools-for-g16.bash}.
-Alternatively you can download the tarball archive of the latest release from
+Alternatively you can download the tarball archive of the latest release from there, too:\newline
 \href{https://github.com/polyluxus/tools-for-g16.bash/releases/latest}{github.com/polyluxus/tools-for-g16.bash/releases/latest}.
 
 After unpacking it only needs to be configured.
