--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -22,6 +22,9 @@
 % Break tables
 \usepackage{longtable}
 
+% a little better spacing
+\usepackage{setspace}
+\onehalfspacing
 % Symbols for SE and GH
 \usepackage{fontawesome} 
 % Symbols for creative commons
