More extensions to the manual

--- a/docs/src/manual/examples.tex
+++ b/docs/src/manual/examples.tex
@@ -271,6 +271,8 @@ or can be chained after one another, respectively.
 The following chart attempts to do the same for the steps after a successful 
 transition state optimisation.
 
+(This part of the documentation is still \emph{very} much a work in progress.)
+
 \tikzinput[width=0.99\linewidth]{./graphics/tikz-transitionstate-flowchart}
 
 \end{document}
