--- a/docs/src/manual/install.tex
+++ b/docs/src/manual/install.tex
@@ -51,4 +51,31 @@ which is already recognised by \texttt{PATH}.
 A common setting for this is the local \texttt{\$HOME/bin}.
 The configure script will, if desired, try to create these softlinks (omitting the \texttt{sh} suffix).
 
+\subsection{Dependencies}
+
+For displaying the help files, the command line utility \texttt{grep} is required.
+
+Some scripts need access to an istallation of Open Babel;\footnote{%
+  For more information see \href{http://openbabel.org/}{http://openbabel.org/}.}
+it is mainly used to interface to the TurboMole \texttt{coord} file format,
+and the post-processing scripts.
+
+It should be no surprise that an installation of Gaussian 16 is necessary for
+some of the scripts, currently used are the utilities \texttt{testrt} and \texttt{formchk}.
+While a main wrapper (see next chapter) is still not included in the repository,
+the scripts will accept these.
+Otherwise the Gaussian environment has to be set up, 
+and the utilities must be found in the \texttt{PATH} directories.
+The direct path to these utilities might work, too.
+
+The following example is a very simple wrapper script when using software modules. 
+\begin{lstlisting}[language=bash]
+#!/bin/bash
+module load gaussian
+"$@"
+\end{lstlisting}
+For the RWTH clusters, which have such an environment installed, 
+there is a separate repository with such wrapper scripts:
+\href{https://github.com/polyluxus/rwth-tools}{github.com/polyluxus/rwth-tools}.
+
 \end{document}
