--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -36,7 +36,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.2.0\_alpha2, 2019-03-08)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.2.0, 2019-03-19)}
 \author{Martin C Schwarzer}
 \date{\today}
 
