--- a/docs/src/manual/install.tex
+++ b/docs/src/manual/install.tex
@@ -11,6 +11,7 @@
 
 \begin{document}
 \section{Installation \& Configuration}
+\label{sec:installation}
 
 The scripts of this repository are not self-contained,
 they each need access to the resources directory 
