--- a/docs/src/manual/main.tex
+++ b/docs/src/manual/main.tex
@@ -36,7 +36,7 @@
 \usepackage{CJKutf8} 
 
 % What this is about
-\title{Manual for \texttt{tools-for-g16.bash} (0.2.0, 2019-03-19)}
+\title{Manual for \texttt{tools-for-g16.bash} (0.2.1, 2019-03-26)}
 \author{Martin C Schwarzer}
 \date{\today}
 
@@ -48,8 +48,10 @@
 
 \subsection*{Preamble}
 
-The following document is currently little more than the already existing reference sheet.
-As documentation often goes, it takes a bit more time to do it properly.
+The following document is a more verbose version of the already existing reference sheet.
+As documentation often goes, it takes some time to reflect all changes properly.
+Some sections (expecially scetion~ref{sec:usage-examples}) may still be incomplete,
+a work in progress.
 I apologise for the inconvenience.
 
 \input{intro.tex}
