--- a/docs/src/manual/utilities.tex
+++ b/docs/src/manual/utilities.tex
@@ -18,6 +18,7 @@
 
 \begin{document}
 \section{Utilities}
+\label{sec:utilities}
 
 There are essentially three different kinds of scripts contained in this repository:
 input generation scripts, execution/submission scripts, and post-processing scripts.
