Bugfix: Proper exit after not recognising or wrong duration format #76 Enhanced: suffixes for duration values for days, hours, minutes #75 Enhanced: updated documentation to include this

--- a/docs/src/manual/intro.tex
+++ b/docs/src/manual/intro.tex
@@ -55,7 +55,8 @@ The following abbreviations will be used throughout:
   {\lstinline`INT`} & Positive integer (including zero) \\
   {\lstinline`NUM`} & Signed whole number (including zero, the plus sign can be omitted) \\
   {\lstinline`FLT`} & Signed floating point number (the plus sign can be omitted) \\
-  {\lstinline`DUR`} & Duration in format {\lstinline![[HH:]MM:]SS!}  \\
+  {\lstinline`DUR`} & Duration specified in colon separated format {\lstinline`[[HH:]MM:]SS`} %
+    \emph{or} with suffixes {\lstinline`INT[D|H|M]`} (days/hours/minutes) \\
 \end{tabular}
 
 \subsection{General notes on the processed files}
