--- a/docs/src/refsheet/main.tex
+++ b/docs/src/refsheet/main.tex
@@ -63,7 +63,7 @@ The following abbreviations will be used:
   \item[INT] Positive integer (including zero)
   \item[NUM] Whole number (including zero)
   \item[FLT] Floating point number
-  \item[DUR] Duration in format \texttt{[[HH:]MM:]SS} 
+  \item[DUR] Duration in format \texttt{[[HH:]MM:]SS} \emph{or} \texttt{INT[D|H|M]}
 \end{rslisttt}
 
 \subsection{General notes on the processed files}
